--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -231,3 +231,5 @@ document.getElementById('confirm_password').addEventListener('input', function()
 });
 </script>
 {% endblock %}
+
+<!-- The end. -->
