--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('oauth_providers') }}">OAuth Providers</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('config_management') }}">Configuration</a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
